apps/media-server/jackett/jackett-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9117
  selector:
    app: jackett
